# UrusStudio

./: .gitignore  .gitmodules  ChangeLog  Makefile.am  README.md  build-ci.sh  codeblocks.spec.in  configure.ac  log.txt  update_revision.sh  urusstudio-contrib.metainfo.xml  urusstudio.appdata.xml  urusstudio.pc.in  urusstudio.plist.in  urusstudio.spec.fedora.in  urusstudio.spec.in
appdata/linux/urusstudio/: default.conf
appdata/msw/urusstudio/: default.conf
debian/: changelog  codeblocks-common.install  codeblocks-contrib-common.install  codeblocks-contrib.install  codeblocks-dev.install  codeblocks-headers.install.wx28  codeblocks-headers.install.wx30  codeblocks-libwxcontrib0.install  codeblocks-wxcontrib-dev.install  codeblocks-wxcontrib-headers.install  codeblocks.install  codeblocks.menu  codeblocks.package  codeblocks.postinst
examples/RadialGL_App/: RadialGL_App.cpp  RadialGL_App.h  RadialGL_App.usp  RadialGL_Dialog.cpp  RadialGL_Dialog.h  gl_drawable.cpp  gl_drawable.h  gl_image.cpp  gl_image.h  gl_image_loader.cpp  gl_image_loader.h  glpane.cpp  glpane.h
examples/RadialGL_App/wxsmith/: RadialGL_Dialog.wxs
m4/: acinclude.m4
patches/mac/: README
src/: CodeBlocks-unix.cbp  CodeBlocks.cbp  CodeBlocks.workspace  CodeBlocks_wx30-unix.cbp  CodeBlocks_wx30.cbp  CodeBlocks_wx30.workspace  CodeBlocks_wx30_64.cbp  CodeBlocks_wx31.cbp  CodeBlocks_wx31_64.cbp  ContribPlugins_wx30.workspace  Makefile.am  UrusStudio-unix-wx31.uruswrksp  UrusStudio-unix-wx31.usp  UrusStudio-unix.uruswrksp  UrusStudio-unix.usp  UrusStudio.uruswrksp  UrusStudio.usp  UrusStudio_v1.0.cbp  UrusStudio_v1.0_plugins.workspace  UrusStudio_wx30-unix.uruswrksp  UrusStudio_wx30-unix.usp  UrusStudio_wx31.uruswrksp  UrusStudio_wx31.usp  update  update.bat  update30  update30.bat  update30_64.bat  update31  update31.bat  update31_64.bat
src/build_tools/autorevision/: Makefile.am  autorevision.cpp
src/build_tools/scrooge/: scrooge.cpp
src/include/: Makefile.am  configmanager.h  filefilters.h  macrosmanager.h
src/include/tinyxml/: Makefile.am
src/mime/: Makefile.am  urusstudio.desktop  urusstudio.xml
src/plugins/: Makefile.am
src/plugins/UrusStudioSettings/: FMainSettings.cpp  FMainSettings.h  Makefile.am  UrusStudioSettings.usp  UrusStudioSettings_31.usp  UrusStudioSettings_wx31.usp  urusstudiosettings.cpp  urusstudiosettings.h
src/plugins/UrusStudioSettings/resources/: Makefile.am  manifest.xml  urussettings_toolbar.xrc  urussettings_toolbar_16x16.xrc
src/plugins/UrusStudioSettings/wxsmith/: FMainSettings.wxs
src/plugins/abbreviations/: abbreviations.cpp  abbreviationsconfigpanel.cpp
src/plugins/astyle/: asstreamiterator.cpp  astyleconfigdlg.cpp  astyleplugin.cpp  dlgformattersettings.cpp  formattersettings.cpp
src/plugins/autosave/: autosave.cpp
src/plugins/classwizard/: classwizard.cpp  classwizarddlg.cpp
src/plugins/codecompletion/: ccoptionsdlg.cpp  ccoptionsprjdlg.cpp  cctest-unix.usp  cctest.cbp  cctest.usp  cctest_wx30-unix.usp  cctest_wx30.cbp  cctest_wx30_64.cbp  cctest_wx31.cbp  cctest_wx31.usp  cctest_wx31_64.cbp  cctreectrl.cpp  classbrowser.cpp  classbrowserbuilderthread.cpp  codecompletion.cbp  codecompletion.cpp  coderefactoring.cpp  doxygen_parser.cpp  gotofunctiondlg.cpp  gotofunctiondlg.h  insertclassmethoddlg.cpp  nativeparser.cpp  nativeparser_base.cpp  selectincludefile.cpp  systemheadersthread.cpp
src/plugins/compilergcc/: Makefile.am  advancedcompileroptionsdlg.cpp  compilerCYGWIN.cpp  compilerGDC.cpp  compilerGNUARM.cpp  compilerIAR.cpp  compilerICC.cpp  (+15 more)
src/plugins/contrib/wxContribItems/wxTreeList/: Makefile.am
src/plugins/contrib/wxContribItems/wxmathplot/: Makefile.am
src/plugins/scriptedwizard/resources/urus/: Makefile.am
src/plugins/scriptedwizard/resources/urus/console/: wizard.script  wizard.xcf
src/plugins/scriptedwizard/resources/urus/console/common/: main.cpp  main.h
src/plugins/scriptedwizard/resources/urus/gui/: Makefile.am  wizard.script  wizard.xcf
src/plugins/scriptedwizard/resources/urus/gui/common/: app.cpp  main.cpp
src/plugins/scriptedwizard/resources/urus/gui/rc/: resource.rc
src/plugins/scriptedwizard/resources/urus/gui/wxsmith/: resource.wxs
src/plugins/scriptedwizard/resources/urus/urdriver/: wizard.script  wizard.xrc
src/plugins/scriptedwizard/resources/urus/urdriver/common/: Backend.cpp  Backend.h  dummy.cpp  dummy.h  main.cpp  main.h
src/scripts/: edit_startup_script.script  gdb_types.script  make_dist.script  sample_plugin.script  startup.script  wx_help.script
src/sdk/: annoyingdialog.cpp  autodetectcompilers.cpp  base64.cpp  blockallocated.cpp  cbauibook.cpp  cbcolourmanager.cpp  cbeditor.cpp  cbeditorprintout.cpp  cbexception.cpp  cbplugin.cpp  cbproject.cpp  cbstyledtextctrl.cpp  cbthreadpool.cpp  cbtreectrl.cpp  cbworkspace.cpp  ccmanager.cpp  compileoptionsbase.cpp  compiler.cpp  compilercommandgenerator.cpp  compilerfactory.cpp  compileroptions.cpp  compiletargetbase.cpp  config-testsuite.cpp  configmanager-revision.cpp  configmanager.cpp  configurationpanel.cpp  configuretoolsdlg.cpp  confirmreplacedlg.cpp  crc32.cpp  debuggermanager.cpp  editarrayfiledlg.cpp  editarrayorderdlg.cpp  editarraystringdlg.cpp  editor_hooks.cpp  editorbase.cpp  editorcolourset.cpp  editorlexerloader.cpp  editormanager.cpp  editpairdlg.cpp  editpathdlg.cpp  (+44 more)
src/src/: Makefile.am  app.cpp  app.h  appglobals.cpp  appglobals.h  associations.cpp  backtracedlg.cpp  breakpointsdlg.cpp  compilersettingsdlg.cpp  cpuregistersdlg.cpp  crashhandler.cpp  debuggermenu.cpp  debuggersettingscommonpanel.cpp  debuggersettingsdlg.cpp  debuggersettingsdlg.h  debuggersettingspanel.cpp  debuggersettingspanel.h  disassemblydlg.cpp  dlgabout.cpp  dlgaboutplugin.cpp  editkeywordsdlg.cpp  editorconfigurationdlg.cpp  environmentsettingsdlg.cpp  examinememorydlg.cpp  find_replace.cpp  goto_file.cpp  goto_file.h  infopane.cpp  ipc.cpp  main.cpp  prefix.cpp  printdlg.cpp  projectdepsdlg.cpp  projectmanagerui.cpp  projectmanagerui.h  projectoptionsdlg.cpp  recentitemslist.cpp  scriptconsole.cpp  scriptingsettingsdlg.cpp  splashscreen.cpp  (+5 more)
(+1264 files in other folders)
