AM_CPPFLAGS = $(WX_CXXFLAGS)

wxcontribitemsdir=$(libdir)/urusstudio/wxContribItems

wxcontribitems_LTLIBRARIES = libwxmathplot.la

libwxmathplot_la_LDFLAGS = -version-info 0:1:0

libwxmathplot_la_LIBADD = $(WX_LIBS)

libwxmathplot_la_SOURCES = \
./mathplot.cpp

sdkdir=$(includedir)/urusstudio/wxContribItems/wxMathPlot

sdk_HEADERS = \
./mathplot.h

