pkgdatadir = $(datadir)/@PACKAGE@/templates/wizard/urus

dist_pkgdata_DATA = gui/logo.png \
					gui/wizard.png \
					gui/wizard.script \
					gui/wizard.xrc

guifilesdir = $(pkgdatadir)/gui

dist_guifiles_DATA =  	gui/logo.png \
		gui/wizard.png \
		gui/wizard.script \
		gui/wizard.xrc

commonfilesdir		= $(pkgdatadir)/gui/common

dist_commonfiles_DATA	= gui/common/app.cpp \
			gui/common/app.h \
			gui/common/main.cpp \
			gui/common/main.h


pchfilesdir		= $(pkgdatadir)/gui/pch

dist_pchfiles_DATA	= gui/pch/wx_pch.h


rcfilesdir		= $(pkgdatadir)/gui/rc

dist_rcfiles_DATA	= gui/rc/resource.rc \
                      gui/rc/uspurus.ico


wxfbdialogdir		= $(pkgdatadir)/gui/wxfb/dialog

dist_wxfbdialog_DATA	= gui/wxfb/dialog/GUIDialog.cpp \
			gui/wxfb/dialog/GUIDialog.h \
			gui/wxfb/dialog/WxWizDialog.fbp


wxfbframedir		= $(pkgdatadir)/gui/wxfb/frame

dist_wxfbframe_DATA	= gui/wxfb/frame/GUIFrame.cpp \
			gui/wxfb/frame/GUIFrame.h \
			gui/wxfb/frame/WxWizFrame.fbp


wxsmithfilesdir		= $(pkgdatadir)/gui/wxsmith

dist_wxsmithfiles_DATA	= gui/wxsmith/app.cpp \
			gui/wxsmith/main.cpp \
			gui/wxsmith/main.h \
			gui/wxsmith/resource.wxs
